Build settings using akka